<resources>
    <string name="app_name">R&amp;R Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">SYSTEM ACCESS</string>
    <!--<string name="app_launcher_name">R<sub>&amp;</sub>R® Launcher</string>-->
    <string name="app_launcher_name">R&amp;R Launcher</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="auth_failed">Error access</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="agent_description">Agent</string>

    <string name="calltype">CALLTYPE</string>
    <string name="exten">EXTEN</string>
    <string name="state">STATE</string>
    <string name="callerid">CALLERID</string>
    <string name="title_activity_fire_base_login">System Login</string>
</resources>
